--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ header{
 .text-menu{
     font-size: 16px;
     color: white !important;
-    font-weight: 600;
+    font-weight: 500;
     margin-right: 20px;
 }
 .say-text{
@@ -95,11 +95,11 @@ header{
 
 }
 .cat-box{
- display: flex;
+    display: flex;
 }
 .item{
     flex-grow: 1;
-    padding: 70px 80px 80px 80px;
+    padding: 80px;
  
 }
 .content{
@@ -147,7 +147,6 @@ header{
 .s1:hover .content p, .s2:hover .content p, .s3:hover .content p{
     color: rgba(255,255,255);
     opacity: 1;
-    z-index: 9;
 }
 
 .s1:hover .serial h1, .s2:hover .serial h1, .s3:hover .serial h1{
@@ -167,7 +166,6 @@ header{
 .s3:hover{
     position: relative;
     background: url(../image/hover-three.png) center no-repeat;
-    
 }
 .s1:hover::before, .s2:hover::before, .s3:hover::before{
     content: '';
@@ -178,5 +176,314 @@ header{
     bottom: 0;
     right: 0;
     left: 0;
-    /* z-index: -9; */
+}
+
+/* ///////////// */
+
+.works{
+    width: 100%;
+    padding: 160px 0;
+    background-color: #F5FBFF;
+}
+.works h1{
+    font-size: 50px;
+    font-weight: 500;
+    color: #001D38;
+    margin-bottom: 180px;
+}
+
+/* /////// */
+
+.work-text{
+    display: flex;
+    align-items: center;
+}
+
+.wrt h3{
+    font-size: 30px;
+    font-weight: 500;
+    color: #001D38;
+}
+.wrt p{
+    width: 85%;
+    color: #596672;
+    margin: 12px 0 38px 0;
+}
+.wrt button{
+    color: white;
+    background-color: #001D38;
+    padding: 14px 47px;
+    font-size: 16px;
+    letter-spacing: 1px;
+    font-weight: 500;
+    border: none;
+    transition: 0.3s;
+}
+.wrt button:hover{
+    color: #001D38;
+    background-color: white;
+    border: 1px solid #001D38;
+    transition: 0.3s;
+}
+.contents{
+    margin-bottom: 160px;
+}
+.contents .container{
+    margin-top: -260px;
+}
+.comfort{
+    margin-bottom: 90px;
+}
+/* //////// */
+
+.about{
+    width: 100%;
+    background-color: #F5FBFF;
+    padding: 30px 0;
+    display: flex;
+}
+
+
+.about-text{
+    padding: 60px 90px 0px 90px;
+    color: #001D38;
+}
+
+.about img{
+    /* width: 100%; */
+}
+
+.about-text h1{
+    font-size: 50px;
+    font-weight: 500;
+}
+
+.about-text p{
+    width: 90%;
+    color: #596672;
+    margin-top: 12px;
+    font-size: 16px;
+    margin: 0;
+}
+.p2{
+    margin-bottom: 30px !important;
+}
+
+.about-stat{
+    margin: 0;
+    padding: 0;
+
+}
+
+.about-stat li{
+    margin-bottom: 25px;
+    list-style-type: none;
+    display: block;
+}
+
+.about-stat h5{
+    font-size: 16px;
+    color: #001D38;
+    font-weight: 500;
+}
+
+.about-stat li .line1{
+    height: 3px;
+    width: 60%;
+    background-color: #001D38;
+}
+.about-stat li .line2{
+    height: 3px;
+    width: 65%;
+    background-color: #001D38;
+}
+.about-stat li .line3{
+    height: 3px;
+    width: 80%;
+    background-color: #001D38;
+}
+
+.s-1{
+    margin-left: 240PX;
+}
+.s-2{
+    margin-left: 290px;
+}
+.s-3{
+    margin-left: 408px;
+}
+
+.about-text button{
+    margin-top: 30px;
+    color: white;
+    background-color: #001D38;
+    padding: 14px 47px;
+    font-size: 16px;
+    letter-spacing: 1px;
+    font-weight: 500;
+    border: none;
+    transition: 0.3s;
+}
+.about-text button:hover{
+    color: #001D38;
+    background-color: white;
+    border: 1px solid #001D38;
+    transition: 0.3s;
+}
+/* ////////// */
+
+.testiminials{
+    width: 100%;
+    height: auto;
+    background: url(../image/testimonial-bg.png);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative; 
+    z-index: 1;
+    text-align: center;
+}
+.overlay2{
+    position: absolute;
+    background: #001D38;
+    opacity: 0.6;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+}
+
+.test-text{
+    padding: 132px 0;
+}
+
+.test-text p{
+    margin:40px auto 40px auto;
+    width: 60%;
+    color: white;
+    text-align: center;
+    font-size: 20px;
+}
+
+.test-text h4{
+    margin-top: 16px;
+    font-size: 16px;
+    color: white;
+}
+
+.test-text h5{
+    color: white;
+    margin-top: 10px;
+    font-size: 14px;
+}
+/* /////////// */
+
+.insta{
+    padding: 110px 0;
+}
+.insta .insta-imag{
+    padding: 20px 20px 0px 75px;
+}
+.insta .col-md-4{
+    padding: 15px;
+}
+
+.insta h1{
+    font-size: 50px;
+    font-weight: 500;
+    color: #001D38;
+    text-align: center;
+    margin-bottom: 50px;
+    letter-spacing: 1px;
+}
+.insta h1 i{
+    font-size: 47px;
+    margin-right: 3px;
+}
+
+/* /////////// */
+.contact{
+    margin-top: 50px;
+    background-color: #001D38;
+    width: 100%;
+    height: auto;
+}
+.top-contact{
+    padding: 120px 0 65px 0;
+    border-bottom: 1px solid #334A60;
+    color: white;
+}
+
+.top-contact .left h2{
+    font-size: 30px;
+    margin-bottom: 12px;
+}
+.top-contact .left h2 a{
+    color: #FFD35A;
+    text-decoration: none;
+}
+.top-contact .left h2 a:hover{
+    text-decoration: underline;
+}
+.top-contact .right{
+    text-align: right;
+}
+.cont-detail{
+    padding-top: 90px;
+    color: white;
+}
+.info-pol h4{
+    margin-bottom: 60px;
+}
+.info-pol p{
+    color: #D5D5D5;
+    font-size: 14px;
+}
+
+.info-pol ul li{
+    list-style: none;
+    margin-left: -34px;
+    margin-bottom: 16px;
+}
+
+.info-pol ul li a{
+    text-decoration: none;
+    color: #D5D5D5;
+    font-size: 14px;
+}
+.info-pol ul li a:hover{
+    color: #FFD35A;
+}
+.fieldo{
+    margin-bottom: 26px;
+}
+.fieldo input{
+    background: transparent;
+    padding: 15px 200px 15px 20px;
+    border: 1px solid #334A60;
+    border-radius: 50px;
+    color: white;
+}
+
+.insert{
+    margin-left: -132px;
+    padding: 11px 22px;
+    border-radius: 50px;
+    font-size: 16px;
+    font-weight: 500;
+    background: #FFE8C3;
+    border: none;
+    color: black;
+    outline: none;
+}
+.bot-cont{
+    margin-top: 120px;
+    margin-bottom: 10px;
+    color: #b6b3b3;
+    text-align: center;
+}
+.bot-cont a{
+    color: white;
+    text-decoration: none;
 }
