--- a/css/style.css
+++ b/css/style.css
@@ -342,7 +342,7 @@ header{
 
 .testiminials{
     width: 100%;
-    height: 77vh;
+    height: auto;
     background: url(../image/testimonial-bg.png);
     background-position: center;
     background-size: cover;
@@ -351,6 +351,7 @@ header{
     z-index: 1;
     text-align: center;
 }
+
 .overlay2{
     position: absolute;
     background: #001D38;
@@ -364,6 +365,11 @@ header{
 
 .test-text{
     padding: 132px 0;
+}
+
+.test-text img{
+    width: auto !important;
+    display: initial !important;
 }
 
 .test-text p{
