--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body{
 }
 
 header{
-    padding: 25px 0;
+    padding: 15px 0;
     position: absolute;
     width: 100%;
     z-index: 9;
@@ -16,7 +16,7 @@ header{
 .sticky{
     width: 100%;
     position: fixed;
-    background-color: #001D38;
+    background-color: rgba(0,0,0,0.5);
 }
 
 .text-menu{
@@ -479,7 +479,9 @@ header{
     border-radius: 50px;
     color: white;
 }
-
+.fieldo input:focus{
+    outline: none;
+}
 .insert{
     margin-left: -132px;
     padding: 11px 22px;
