--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ header{
     width: 100%;
     position: fixed;
     background-color: rgba(0,0,0,0.5);
+    transition: 0.2s;
 }
 
 .text-menu{
@@ -47,13 +48,24 @@ header{
 
 
 .banner{
-    width: 100%;
-    height: 100vh;
-    padding: 80px 0px;
+    width: 100% !important;
+    height: auto !important;
+    padding: 80px 0px !important;
     background: url(../image/banner.png);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-position: center !important;
+    background-repeat: no-repeat !important;
+    background-size: cover !important;
+    position: relative; 
+    z-index: 1;
+}
+.banner-1{
+    width: 100% !important;
+    height: auto !important;
+    padding: 80px 0px !important;
+    background: url(../image/banner2.png);
+    background-position: center !important;
+    background-repeat: no-repeat !important;
+    background-size: cover !important;
     position: relative; 
     z-index: 1;
 }
